Make some types internal and move others to their own files.

--- a/Spriting/Spriting.csproj
+++ b/Spriting/Spriting.csproj
@@ -51,18 +51,21 @@
     <Compile Include="BackgroundImageClass.cs" />
     <Compile Include="CssImageTransformer.cs" />
     <Compile Include="CssSelectorAnalyzer.cs" />
+    <Compile Include="Direction.cs" />
     <Compile Include="Hasher.cs" />
     <Compile Include="ICssImageTransformer.cs" />
     <Compile Include="ICssSelectorAnalyzer.cs" />
     <Compile Include="IFileWrapper.cs" />
-    <Compile Include="IReducer.cs" />
     <Compile Include="ISpriteContainer.cs" />
     <Compile Include="ISpriteManager.cs" />
     <Compile Include="PngOptimizer.cs" />
     <Compile Include="Position.cs" />
+    <Compile Include="PositionMode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PropertyCompletion.cs" />
     <Compile Include="RegexCache.cs" />
     <Compile Include="Registry.cs" />
+    <Compile Include="RepeatStyle.cs" />
     <Compile Include="SpritingSettings.cs" />
     <Compile Include="Tracer.cs" />
     <Compile Include="SelectorComparer.cs" />
