--- a/spritastic/Spritastic.Facts/Spritastic.Facts.csproj
+++ b/spritastic/Spritastic.Facts/Spritastic.Facts.csproj
@@ -61,17 +61,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BackgroundImageClassFacts.cs" />
-    <Compile Include="BitmapPixelComparer.cs" />
-    <Compile Include="CssImageTransformerFacts.cs" />
-    <Compile Include="CssSelectorAnalyzerFacts.cs" />
-    <Compile Include="BitmapTestExtentions.cs" />
+    <Compile Include="Parser\BackgroundImageClassFacts.cs" />
+    <Compile Include="Utilities\BitmapPixelComparer.cs" />
+    <Compile Include="Generator%27\CssImageTransformerFacts.cs" />
+    <Compile Include="Selector\CssSelectorAnalyzerFacts.cs" />
+    <Compile Include="Utilities\BitmapTestExtentions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SelectorComparerFacts.cs" />
-    <Compile Include="SpriteContainerFacts.cs" />
-    <Compile Include="SpriteManagerFacts.cs" />
-    <Compile Include="SpriteWriterFacts.cs" />
-    <Compile Include="Testable.cs" />
+    <Compile Include="Selector\SelectorComparerFacts.cs" />
+    <Compile Include="Generator%27\SpriteContainerFacts.cs" />
+    <Compile Include="Generator%27\SpriteManagerFacts.cs" />
+    <Compile Include="Generator%27\SpriteWriterFacts.cs" />
+    <Compile Include="Utilities\Testable.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -93,6 +93,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
