--- a/spritastic/Spritastic/Spritastic.csproj
+++ b/spritastic/Spritastic/Spritastic.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Generator\CssImageTransformer.cs" />
+    <Compile Include="ImageLoad\IImageLoader.cs" />
     <Compile Include="Selector\CssSelectorAnalyzer.cs" />
     <Compile Include="Parser\BackgroundImageClass.cs" />
     <Compile Include="Parser\Direction.cs" />
@@ -59,9 +60,10 @@
     <Compile Include="SpriteException.cs" />
     <Compile Include="SpriteGenerator.cs" />
     <Compile Include="SpritePackage.cs" />
-    <Compile Include="Utilities\Hasher.cs" />
+    <Compile Include="SpriteStore\ISpriteStore.cs" />
     <Compile Include="Generator\ICssImageTransformer.cs" />
     <Compile Include="Selector\ICssSelectorAnalyzer.cs" />
+    <Compile Include="Utilities\FileWrapper.cs" />
     <Compile Include="Utilities\IFileWrapper.cs" />
     <Compile Include="Generator\ISpriteContainer.cs" />
     <Compile Include="Generator\ISpriteManager.cs" />
@@ -70,7 +72,7 @@
     <Compile Include="Utilities\PngOptimizer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\RegexCache.cs" />
-    <Compile Include="SpritasticSettings.cs" />
+    <Compile Include="SpritingSettings.cs" />
     <Compile Include="Utilities\Tracer.cs" />
     <Compile Include="Selector\SelectorComparer.cs" />
     <Compile Include="Generator\SpriteContainer.cs" />
@@ -81,6 +83,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
