Change ICssImageTransformer to ICssImageExtractor and move sprite injection into the SpritedImage class. This means CssImageExtractor now has a single responsibility and the injection behaviour is with the data it depends on.

--- a/spritastic/Spritastic.Facts/Spritastic.Facts.csproj
+++ b/spritastic/Spritastic.Facts/Spritastic.Facts.csproj
@@ -61,6 +61,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Generator\SpritedImageFacts.cs" />
     <Compile Include="ImageLoad\HttpImageLoaderFacts.cs" />
     <Compile Include="Parser\BackgroundImageClassFacts.cs" />
     <Compile Include="SpriteGeneratorFacts.cs" />
